src/corelib/thread/qthread.cpp
@@ -174,7 +174,7 @@ void QAdoptedThread::run()
 
 QThreadPrivate::QThreadPrivate(QThreadData *d)
     : QObjectPrivate(), running(false), finished(false), terminated(false),
-      stackSize(0), priority(QThread::InheritPriority), data(d)
+      stackSize(0), priority(QThread::InheritPriority), data(d), object(0)
 {
 #if defined (Q_OS_UNIX)
     thread_id = 0;
@@ -377,6 +377,9 @@ QThread::QThread(QObject *parent)
     Q_D(QThread);
     // fprintf(stderr, "QThreadData %p created for thread %p\n", d->data, this);
     d->data->thread = this;
+
+    d->object = new QThreadPrivateInternalObject;
+    d->object->moveToThread(this);
 }
 
 /*! \internal
@@ -387,6 +390,8 @@ QThread::QThread(QThreadPrivate &dd, QObject *parent)
     Q_D(QThread);
     // fprintf(stderr, "QThreadData %p taken from private data for thread %p\n", d->data, this);
     d->data->thread = this;
+
+    // do not create the internal object for adopted threads
 }
 
 /*!
@@ -408,6 +413,9 @@ QThread::~QThread()
 
         d->data->thread = 0;
     }
+
+    delete d->object;
+    d->object = 0;
 }
 
 /*!
@@ -510,6 +518,21 @@ int QThread::exec()
 void QThread::exit(int returnCode)
 {
     Q_D(QThread);
+    if (d->object) {
+        QMetaObject::invokeMethod(d->object, "exit", Q_ARG(int, returnCode));
+    } else {
+        QMutexLocker locker(&d->mutex);
+        d->data->quitNow = true;
+        for (int i = 0; i < d->data->eventLoops.size(); ++i) {
+            QEventLoop *eventLoop = d->data->eventLoops.at(i);
+            eventLoop->exit(returnCode);
+        }
+    }
+}
+
+void QThreadPrivateInternalObject::exit(int returnCode)
+{
+    QThreadPrivate *d = static_cast<QThreadPrivate *>(QObjectPrivate::get(thread()));
     QMutexLocker locker(&d->mutex);
     d->data->quitNow = true;
     for (int i = 0; i < d->data->eventLoops.size(); ++i) {
