src/corelib/thread/qthread_unix.cpp
@@ -253,7 +253,6 @@ void *QThreadPrivate::start(void *arg)
     pthread_setspecific(current_thread_data_key, data);
 
     data->ref();
-    data->quitNow = false;
 
     // ### TODO: allow the user to create a custom event dispatcher
     createEventDispatcher(data);
@@ -495,6 +494,7 @@ void QThread::start(Priority priority)
     d->running = true;
     d->finished = false;
     d->terminated = false;
+    d->data->quitNow = false;
 
     pthread_attr_t attr;
     pthread_attr_init(&attr);
